--- a/updine-user/Base.lproj/Main.storyboard
+++ b/updine-user/Base.lproj/Main.storyboard
@@ -20,7 +20,6 @@
                             </mapView>
                             <view userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BHa-6U-joA">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qXh-bG-X0M">
                                 <rect key="frame" x="50" y="54" width="128" height="34"/>
@@ -201,7 +200,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="267"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="CompanyVideo" translatesAutoresizingMaskIntoConstraints="NO" id="jO6-wI-5nP">
-                                        <rect key="frame" x="0.0" y="-79" width="375" height="822"/>
+                                        <rect key="frame" x="0.0" y="-79" width="375" height="895"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XjV-Zl-eBq" customClass="iCarousel">
@@ -216,8 +215,8 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Lc-1Q-sFB">
-                                <rect key="frame" x="123" y="687" width="128" height="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Lc-1Q-sFB">
+                                <rect key="frame" x="123" y="708" width="129" height="40"/>
                                 <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="24"/>
                                 <state key="normal" title="Learn More">
                                     <color key="titleColor" red="0.20798527759999999" green="0.23915282600000001" blue="0.66666668650000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -231,8 +230,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="EOj-7q-qwz" firstAttribute="top" secondItem="EMr-UP-Aky" secondAttribute="top" id="1zO-Ed-Huk"/>
+                            <constraint firstItem="2hj-g9-JUK" firstAttribute="bottom" secondItem="4Lc-1Q-sFB" secondAttribute="bottom" constant="30" id="4Nj-IZ-42q"/>
                             <constraint firstAttribute="bottom" secondItem="EOj-7q-qwz" secondAttribute="bottom" constant="545" id="7N0-dR-s0r"/>
-                            <constraint firstItem="2hj-g9-JUK" firstAttribute="bottom" secondItem="4Lc-1Q-sFB" secondAttribute="bottom" constant="51" id="9eY-zo-7Jp"/>
                             <constraint firstItem="EOj-7q-qwz" firstAttribute="trailing" secondItem="2hj-g9-JUK" secondAttribute="trailing" id="IQF-6W-Jh3"/>
                             <constraint firstItem="4Lc-1Q-sFB" firstAttribute="leading" secondItem="2hj-g9-JUK" secondAttribute="leading" constant="123" id="OPO-Kr-1rP"/>
                             <constraint firstItem="EOj-7q-qwz" firstAttribute="centerX" secondItem="4Lc-1Q-sFB" secondAttribute="centerX" id="sg9-ef-YsD"/>
