--- a/updine-user/Base.lproj/Main.storyboard
+++ b/updine-user/Base.lproj/Main.storyboard
@@ -153,17 +153,8 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C9r-M9-rY2">
-                                <rect key="frame" x="281" y="23" width="78" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
-                                <state key="normal" title="Join Call"/>
-                                <connections>
-                                    <action selector="joinCallPressed:" destination="yFR-aX-t3D" eventType="touchUpInside" id="XI2-ga-Jgl"/>
-                                </connections>
-                            </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OjE-ic-P7w" customClass="iCarousel">
-                                <rect key="frame" x="0.0" y="462" width="375" height="246"/>
+                                <rect key="frame" x="0.0" y="503" width="375" height="205"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <connections>
@@ -171,6 +162,18 @@
                                     <outlet property="delegate" destination="yFR-aX-t3D" id="Pdv-z5-OCx"/>
                                 </connections>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="profileScreen" translatesAutoresizingMaskIntoConstraints="NO" id="ZXc-nU-r9M">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="454"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C9r-M9-rY2">
+                                <rect key="frame" x="28" y="138" width="324" height="92"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <connections>
+                                    <action selector="joinCallPressed:" destination="yFR-aX-t3D" eventType="touchUpInside" id="XI2-ga-Jgl"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="816-Ze-nRg"/>
@@ -585,6 +588,7 @@
         <image name="payment" width="750" height="1624"/>
         <image name="person.circle" catalog="system" width="64" height="60"/>
         <image name="profile-2" width="750" height="1624"/>
+        <image name="profileScreen" width="750" height="908"/>
         <image name="rsvp2" width="738" height="1400"/>
     </resources>
     <inferredMetricsTieBreakers>
